# Backend_Takehome_problem_solution

./: .gitignore  README.md  pyproject.toml
examples/: use_as_module.py
pharma_papers/: cli.py  paper_processor.py  pubmed_client.py  utils.py
scripts/: publish_to_testpypi.py
tests/: test_cli.py  test_paper_processor.py  test_pubmed_client.py
